# drug-discovery-openenv

./: .env.example  .gitignore  Dockerfile  Drug_Discovery_OpenEnv_README.docx  EVALUATION_CRITERIA_ASSESSMENT.md  LICENSE  PRE_SUBMISSION_CHECKLIST.md  README.md  deploy_hf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_local.py  validate-submission.sh  validator.py
envs/drug_discovery/: env.py
server/: app.py
